# actix-handler-macro

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
src/: expand_addr.rs  expand_impl_handlers.rs  expand_method_handlers.rs  lib.rs  options.rs  utils.rs
src/actor_derive/: actor.rs  arbiter_service.rs  mod.rs  supervised.rs
tests/: test_actor_derive_with_custom_context.rs  test_arbiter_service_derive.rs  test_documentation.rs  test_macro.rs  test_supervised_derive.rs
