[package]
name = "actix-handler-macro"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"

# [patch.crates-io]
# actix = { path = "../actix" }
# actix_derive = { path = "../actix/actix-derive" }

[dev-dependencies]
actix = { version = "*" }
actix_derive = { version = "*" }
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
