[package]
name = "actix-handler-macro"
description = "Helper macros for using Actix. Generates handlers, actors and address traits."
license = "MIT"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
actix = { version = "*" }
actix_derive = { version = "*" }
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
