[package]
name = "actix-handler-macro"
description = "Helper macros for using Actix. Generates handlers, actors and address traits."
license = "MIT"
version = "0.2.0"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/yamadapc/actix-handler-macro"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
actix = { version = "0.10" }
actix_derive = { version = "0.5" }
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
